  - Fixed the combat tactics for random different combat tactics not properly being set
  - Fixed Georges Leygues Class destroyer definition in OOB MTG (from "frigate" to "destroyer")
  - Fix the Indian focus "Brazilian Industrial Partnership" not properly giving influence to Brazil

 Content:
  - NEW FOCUS TREE: Netherlands
  - REWORKED/IMPROVED: Singapore
  - Influence Economic Aid now no longer requires you to be a top 7 influencer and you can send aid to other countries
  - Moved the political power costs for the Greek decisions from the effect to the cost trigger so they actually show their cost
  - Reworked the Arab Spring mechanics to be more robust and enjoyable to play
  - Reworked the "Cheap Loans from the IMF" decision to be more robust and require you to balance your budget without requiring you to pay down your debt

 Game Rules:
  - Added two new custom game rules for Syria to allow you to force the historical civil war from the Arab Spring as well as the Islamic State spawn

 Graphics:
  - Fixed the engine type slot icons for the various tank chassis for custom nation blueprints

 Localization:
  - Improved the localization for the Greek decision mechanic for Cyprus
  - Added some QOL of tooltips and expanded localization for the various international system buttons
  - Fixed the debt display not rounding when there is too many digits in the debt top bar

 Map:
  - Slight adjustment to the Riau Islands near Singapore/Indonesia
  - Add Antigua and Barbuda to the game
  - Make Panamal Canal its own state for future Panama Canal content
  - Added a new state to Afghanistan called Qalat for the upcoming American Foreign Policy content

 Performance:
  - Reduced the amount of variables and flags that are saved into the save game file optimizing it
  - Removed a number of scripted localization that were not referenced anywhere reducing some old and antiquated code bloat

 User Interface: