@@ -330,6 +330,8 @@
  taiwan.28.a: "There seems to be no other way."
  taiwan.28.b: "Impossible!"
  
+ 
+ 
  #Flag
  TAI_afrc_units_were_all_set: "AFRC unit all set"
  TAI_mob_first_level: "First level mobilization"
