@@ -1,5 +1,5 @@
 TAI_category = {
 	icon = GFX_decision_generic_taiwan
-
+	priority = 600
 	allowed = { original_tag = TAI }
 }
