@@ -16,7 +16,7 @@ TAI_category = {
 		complete_effect = {
 			log = "[GetDateText]: [Root.GetName]: Decision TAI_coast_guard"
 			add_political_power = -25
-			effect_tooltip = { navy_experience = 5 }
+			effect_tooltip = { navy_experience = 100 }
 			hidden_effect = { country_event = { id = taiwan.4 days = 1 } }
 		}
 
@@ -57,6 +57,17 @@ TAI_category = {
 			}
 			set_temp_variable = { treasury_change = -5.00 }
 			modify_treasury_effect = yes
+			599 = {
+				add_building_construction = {
+					type = nuclear_facility
+					level = 1
+					province = 11914
+				}
+			}
+			add_breakthrough_points = {
+				specialization = specialization_nuclear
+				value = 1
+			}
 			hidden_effect = { country_event = { id = taiwan.5 days = 1 } }
 		}
 
@@ -96,6 +107,40 @@ TAI_category = {
 			add_political_power = -50
 			add_war_support = 0.2
 			remove_ideas = rival_government
+		}
+
+		ai_will_do = {
+			base = 100
+		}
+	}
+
+	TAI_choose_new_capital = {
+
+		visible = {
+			547 = {
+				is_owned_and_controlled_by = TAI
+			}
+			540 = {
+				is_owned_and_controlled_by = TAI
+			}
+			583 = {
+				is_owned_and_controlled_by = TAI
+			}
+		}
+
+		available = {
+			NOT = {
+				has_war_with = CHI
+			}
+		}
+
+		fire_only_once = yes
+
+		days_remove = 14
+
+		remove_effect = {
+			log = "[GetDateText]: [Root.GetName]: Decision TAI_choose_new_capital"
+			country_event = taiwan.170
 		}
 
 		ai_will_do = {
