@@ -3617,6 +3617,7 @@ focus_tree = {
 				has_war_with = USA
 				has_idea = IRQ_triumph_over_america
 				NOT = { country_exists = USA }
+				date > 2009.01.01
 			}
 		}
 		search_filters = { FOCUS_FILTER_POLITICAL FOCUS_FILTER_DIPLOMACY }
