@@ -648,6 +648,9 @@ trigger_year_2004_events = {
 	PER = {
 		country_event = { id = iranian_focus.165 days = 1 random_days = 360 }
 	}
+	PAL = {
+		country_event = { id = palestine.2 days = 320 }
+	}
 	ARM = {
 		if = {
 			limit = {
