@@ -1,0 +1,85 @@
+﻿add_namespace = palestine
+
+country_event = { # Arafat dies
+	id = palestine.1
+	title = palestine.1.t
+	desc = palestine.1.d
+	is_triggered_only = yes
+	trigger = {
+		neutrality_neutral_social_are_in_power = yes
+	}
+	option = {
+		name = palestine.1.a
+		log = "[GetDateText]: [This.GetName]: palestine.1.a executed"
+		custom_effect_tooltip = PAL_arafat_dead_TT
+		hidden_effect = {
+			create_country_leader = {
+				name = "Rawhi Fattouh"
+				picture = "rawhi_fattouh.dds"
+				ideology = neutral_Social
+				traits = {
+					neutrality_neutral_Social
+				}
+			}
+			country_event = {
+				id = palestine.2
+				days = 90
+			}
+		}
+	}
+}
+
+country_event = { # Abbas Elected
+	id = palestine.2
+	title = palestine.2.t
+	desc = palestine.2.d
+
+	is_triggered_only = yes
+	trigger = {
+		neutrality_neutral_social_are_in_power = yes
+	}
+	option = {
+		name = palestine.2.a
+		log = "[GetDateText]: [This.GetName]: palestine.2.a executed"
+		hidden_effect = {
+			create_country_leader = {
+				name = "Mahmoud Abbas"
+				picture = "mahmoud_abbas.dds"
+				ideology = neutral_Social
+				traits = {
+					neutrality_neutral_Social
+				}
+			}
+		}
+	}
+	option = {
+		name = palestine.2.b
+		log = "[GetDateText]: [This.GetName]: palestine.2.b executed"
+
+		hidden_effect = {
+			clear_array = ruling_party
+			clear_array = gov_coalition_array
+			add_to_array = { ruling_party = 3 }
+			update_government_coalition_strength = yes
+			set_coalition_drift = yes
+			set_ruling_leader = yes
+			set_leader = yes
+			set_politics = {
+				ruling_party = democratic
+				elections_allowed = yes
+			}
+			set_temp_variable = { party_index = 3 }
+			set_temp_variable = { party_popularity_increase = 0.15 }
+			set_temp_variable = { temp_outlook_increase = 0.25 }
+			add_relative_party_popularity = yes
+			create_country_leader = {
+				name = "Mustafa Barghouti"
+				picture = "mustafa_barghouti.dds"
+				ideology = socialism
+				traits = {
+					western_socialism
+				}
+			}
+		}
+	}
+}
