@@ -607,6 +607,40 @@ country_event = {
 	}
 }
 
+country_event = {
+	id = taiwan.170
+	title = taiwan.170.t
+	desc = taiwan.170.d
+
+	option = {
+		name = taiwan.170.a
+		log = "[GetDateText]: [This.GetName]: taiwan.170.a executed"
+		set_capital = {
+			state = 547
+		}
+	}
+	option = {
+		name = taiwan.170.b
+		log = "[GetDateText]: [This.GetName]: taiwan.170.b executed"
+		set_capital = {
+			state = 540
+		}
+	}
+	option = {
+		name = taiwan.170.c
+		log = "[GetDateText]: [This.GetName]: taiwan.170.c executed"
+		set_capital = {
+			state = 583
+		}
+	}
+	option = {
+		name = taiwan.170.d1
+		log = "[GetDateText]: [This.GetName]: taiwan.170.d1 executed"
+
+	}
+}
+
+
 ###Taiwan regular news events
 
 #CSSTA passed
