@@ -5076,3 +5076,13 @@ ISR_jew_home_left_TT: "£ISR_Western_Autocracy §YHaBayit HaYehudi§! has left t
 ISR_labour_left_TT: "£ISR_socialism §YHaAvoda§! has left the coalition!"
 ISR_meretz_left_TT: "£ISR_neutral_Social §YMeretz§! has left the coalition!"
 ISR_raam_left_TT: "£ISR_Neutral_Muslim_Brotherhood §YHaReshima HaAravit HaMe'uhedet§! has left the coalition!"
+
+ # Palestinian Events (Move later)
+palestine.1.t: "Yasser Arafat Dies"
+palestine.1.d: "Following weeks of deteriorating conditions, Yasser Arafat, who has led Palestine for the past few decades, has died. After collapsing into a coma he passed away earlier today from a hemorrhagic stroke. Although it is unknown as to what caused the illness, the Palestinian nation cannot be put on hold over the details of Arafat's death. Rawhi Fattouh has been chosen as the interim leader until the next round of elections."
+palestine.1.a: "Inna Lillahi Wa Inna Iaihi Rajioon"
+palestine.2.t: "Election Season"
+palestine.2.d: "The voting booths have opened for the election of the next President of the Palestinian Authority. The two primary candidates are Mahmoud Abbas, and Mustafa Barghouti. It is still unknown as to who the winner will be, but polling has been strongly suggesting that the next President very well may be..,"
+palestine.2.a: "Mahmoud Abbas, Arafat's successor"
+palestine.2.b: "Mustafa Barghouti, an independent candidate"
+PAL_arafat_dead_TT: "§HYasser Arafat§! dies"
