@@ -888,6 +888,12 @@
  taiwan.16.t: "Tank fell off the bridge"
  taiwan.16.d: "An army CM-11 tank toppled into a creek in Pingtung County as it was returning to base from a training exercise yesterday morning, killing three of the five soldiers onboard. The driver sustained only minor injuries and pulled himself out of the tank. The four others, who were inside the gun turret, could not escape through the turret’s hatches because the tank was upside down."
  taiwan.16.a: "Investigate how this could happen"
+ taiwan.170.t: "Choosing A New Capital"
+ taiwan.170.d: "As we savor the fruits of victory, we need to begin thinking about the relocation of our administrative capital towards the mainland. Taipei is simply too far from the major population centers of mainland China, and as a result, our ability to effectively govern the nation has become increasingly difficult. Thus, our capital shall be..."
+ taiwan.170.a: "Beijing"
+ taiwan.170.b: "Shanghai"
+ taiwan.170.c: "Chongqing"
+ taiwan.170.d1: "The same, Taipei"
  ### Taiwan News Events ###
  taiwan_news.1.t: "The Cross-Strait Service Trade Agreement has been Ratified"
  taiwan_news.1.d: "Following its approval by the Taiwanese legislature, the CSSTA, a free-trade agreement between Taiwan and mainland China, has officially entered Taiwanese law."
