@@ -38,6 +38,7 @@ v1.12.1
   - Fixed the combat tactics for random different combat tactics not properly being set
   - Fixed Georges Leygues Class destroyer definition in OOB MTG (from "frigate" to "destroyer")
   - Fix the Indian focus "Brazilian Industrial Partnership" not properly giving influence to Brazil
+  - Fixed an issue where Iraq would not win against the U.S. upon capturing the Kuwaiti naval base
 
  Content:
   - NEW FOCUS TREE: Netherlands
@@ -46,9 +47,17 @@ v1.12.1
   - Moved the political power costs for the Greek decisions from the effect to the cost trigger so they actually show their cost
   - Reworked the Arab Spring mechanics to be more robust and enjoyable to play
   - Reworked the "Cheap Loans from the IMF" decision to be more robust and require you to balance your budget without requiring you to pay down your debt
+  - Added a foreign policy decision category for the United States
+  - Added a mechanic regarding the Ba'athist on the loose following the Iraq invasion
+  - Reworked the Afghan-Taliban Insurgency mechanic
+  - Added country-specific flavor to Pakistan
+  - Added country-specific flavor to Palestine
+  - Added a decision & event to relocate your capital as Taiwan if you reclaim the mainland
+  - Improved effects on Taiwanese decisions
 
  Game Rules:
   - Added two new custom game rules for Syria to allow you to force the historical civil war from the Arab Spring as well as the Islamic State spawn
+  - Added a custom game rule to resolve "border gore" following a peace deal (you will no longer have 40 Russia's if they lose)
 
  Graphics:
   - Fixed the engine type slot icons for the various tank chassis for custom nation blueprints
